2001-09-21  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* README: Update summary description to better reflect the current
	workings of the software.

2001-09-19  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* README: TMDA 0.37 is released.

	* CRYPTO: Added information on variable length HMACs.

2001-09-13  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* README: TMDA 0.36 is released.

2001-09-10  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* README: TMDA 0.35 is released.

2001-08-29  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* FAQ: Added tmda-clean info.

2001-08-28  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* README: TMDA 0.34 is released.

2001-08-27  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* README: TMDA 0.33 is released.

2001-08-23  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* README: TMDA 0.32 is released.

	* INSTALL: Added usage reporting information.

2001-08-15  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* FAQ: Added link to Einar Bordewich's TMDA configuation posted to
	tmda-list.

2001-07-27  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* README: TMDA 0.31 is released.

2001-07-25  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* README: TMDA 0.30 is released.

2001-07-11  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* README: TMDA 0.23 is released.

2001-06-28  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* README: TMDA 0.22 is released.

2001-06-18  Jason R. Mastaler  <jason@mastaler.com>

	* README: TMDA 0.21 is released.

2001-06-13  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* FAQ: Updated to reflect the new wildcard matching syntax.

	* UPGRADE: Ditto

2001-06-06  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* README: TMDA 0.20 is released.
	
2001-05-28  Jason R. Mastaler  <jason@mastaler.com>

	* README: TMDA 0.15 is released.
