@@ -25,13 +25,17 @@ class Postfix(MTA):
         self.EX_OK = 0                  # successful termination; exit
         self.EX_STOP = None             # Postfix doesn't have such an exit code
         self.EX_TEMPFAIL = 75           # temporary failure; defer delivery
+        
     # Define the four states of a message.
     def bounce(self):
         sys.exit(self.EX_HARD)
+
     def defer(self):
         sys.exit(self.EX_TEMPFAIL)
+
     def stop(self):
         sys.exit(self.EX_OK)
+
     def deliver(self, message=None):
         self.local_delivery_agent = Defaults.LOCAL_DELIVERY_AGENT
         # Make sure the LDA actually exists first.
@@ -42,7 +46,21 @@ class Postfix(MTA):
         else:
             self.__pipeline = os.popen(self.local_delivery_agent, 'w')
             self.__pipeline.write(message)
-            sys.exit(self.__pipeline.close())
+            exitcode = self.__pipeline.close()
+            if not exitcode:
+                exitcode = 0
+            signal = exitcode & 0x7f
+            exitval = exitcode >> 8
+            if signal:
+                print "LOCAL_DELIVERY_AGENT died by signal", signal
+                self.defer()
+            elif exitval == 0:
+                self.stop()
+            elif exitval >= 64 and exitval <= 78:
+                sys.exit(exitval)
+            else:
+                print "LOCAL_DELIVERY_AGENT unknown exit value", exitval
+                self.defer()
 
 
 class Qmail(MTA):
@@ -54,13 +72,17 @@ class Qmail(MTA):
         self.EX_OK = 0                  # success; process next instruction
         self.EX_STOP = 99               # success; ignore further instructions
         self.EX_TEMPFAIL = 111          # soft error; defer delivery
+
     # Define the four states of a message.
     def bounce(self):
         sys.exit(self.EX_HARD)
+
     def defer(self):
         sys.exit(self.EX_TEMPFAIL)
+
     def stop(self):
         sys.exit(self.EX_STOP)
+
     def deliver(self, message=None):
         sys.exit(self.EX_OK)
 
