@@ -1,3 +1,7 @@
+2001-10-15  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* THANKS (Contributions): Add Matt Armstrong.
+
 2001-09-21  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* README: Update summary description to better reflect the current
